...
    <string name="note_repeating">Повтор: %1$s</string>
    <string name="checklist_preview_item">- %1$s</string>
    <string name="more_items_indicator">...</string>

    <string name="create_note_title">Создание заметки</string>
    <string name="edit_note_title">Редактирование заметки</string>
    <string name="note_title_label">Заголовок</string>
    <string name="note_title_required">Введите заголовок</string>
    <string name="note_content_label">Содержимое</string>
    <string name="note_voice_input_description">Надиктовать текст</string>
    <string name="note_voice_prompt">Продиктуйте заметку</string>
    <string name="note_voice_dialog_title">Проверь текст</string>
    <string name="note_voice_dialog_hint">Распознанный текст</string>
...
    <string name="home_info_delete_field">Удалить поле</string>
    <string name="home_info_add_field">Добавить поле</string>
    <string name="home_info_note_label">Заметка</string>
    <string name="home_info_links">Ссылки</string>
    <string name="home_info_link_label">Ссылка</string>
    <string name="home_info_delete_link">Удалить ссылку</string>
    <string name="home_info_add_link">Добавить ссылку</string>
    <string name="home_info_title_required">Введите заголовок</string>
    <string name="home_info_delete_card_title">Удалить карточку?</string>
    <string name="home_info_delete_card_message">Это действие нельзя отменить.</string>
    <string name="home_section_meters">Счётчики</string>
    <string name="home_section_appliances">Техника</string>
    <string name="home_section_lighting">Освещение</string>
    <string name="home_section_documents">Документы</string>
    <string name="home_section_contacts">Контакты</string>
    <string name="home_section_other">Другое</string>
    <string name="auth_show_password">Показать пароль</string>
    <string name="auth_hide_password">Скрыть пароль</string>
    <string name="notes_title">Заметки</string>

...
